<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>0.3.7</version>
    </parent>

    <groupId>no.nav.foreldrepenger.los</groupId>
    <artifactId>fplos</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>FPLOS :: Root</name>

    <modules>
        <module>migreringer</module>
        <module>domene</module>
        <module>web</module>
    </modules>

    <properties>
        <revision>2.8.2-SNAPSHOT</revision>
        <java.version>17</java.version>
        <fp-kontrakter.version>6.1.27</fp-kontrakter.version>
        <felles.version>4.2.8</felles.version>
        <prosesstask.version>3.1.13</prosesstask.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>no.nav.vedtak.prosesstask</groupId>
            <artifactId>prosesstask</artifactId>
        </dependency>

        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.felles</groupId>
            <artifactId>felles-testutilities</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.foreldrepenger.los</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.los</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.los</groupId>
                <artifactId>domene</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.los</groupId>
                <artifactId>web</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Felles biblioteker -->
            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>felles-integrasjon-pom</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>person-klient</artifactId>
                <version>${felles.version}</version>
            </dependency>

            <dependency>
                <!-- Importeres etter felles-root og felles for å sikre samme avhengigheter gjennom hele! -->
                <groupId>no.nav.vedtak.prosesstask</groupId>
                <artifactId>prosesstask-root</artifactId>
                <version>${prosesstask.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter.topics</groupId>
                <artifactId>fp-topics</artifactId>
                <version>${fp-kontrakter.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter.topics</groupId>
                <artifactId>fp-topics-manifest</artifactId>
                <version>${fp-kontrakter.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter.topics</groupId>
                <artifactId>fp-topics-behandlingsprosess</artifactId>
                <version>${fp-kontrakter.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireJavaVersion>
                            <version>[17,)</version>
                        </requireJavaVersion>
                        <requireMavenVersion>
                            <version>[3.6.1,)</version>
                        </requireMavenVersion>
                    </rules>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <url>https://github.com/navikt/fplos</url>
        <connection>scm:git:https://github.com/navikt/fplos.git</connection>
        <developerConnection>scm:git:git@github.com:navikt/fplos.git</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fplos</url>
        </repository>
    </distributionManagement>


</project>
